# python-flask-base-api

./: .env.sample  .flaskenv  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE.md  README.md  TEMPLATE_FEATURES.md  TEMPLATE_USAGE.md  gunicorn_conf.py  pyproject.toml
base_api/: __init__.py  exceptions.py  initialize.py
base_api/api/: __init__.py
base_api/api/resources/: __init__.py
base_api/api/schemas/: __init__.py
base_api/api/validators/: __init__.py
base_api/commands/: __init__.py
base_api/domain/: __init__.py  services.py
base_api/infrastructure/: apm.py  cacher.py  cloud.py  config.py  connections.py  database.py  security.py  validation.py  worker.py
base_api/repositories/: __init__.py
migrations/: alembic.ini  env.py  script.py.mako
tests/: conftest.py
tests/integration/: test_healthcheck.py
tests/unit/: test_app.py  test_resources.py  test_security.py  test_services.py  test_validation.py
