[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "base-api"
version = "0.0.1"
description = "Reusable Flask API shell"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.md" }
classifiers = [
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Programming Language :: Python :: 3",
  "Framework :: Flask",
]
dependencies = [
  "Flask==3.1.3",
  "Flask-RESTful==0.3.10",
  # BASE_API_OPTIONAL: postgresql
  "SQLAlchemy==2.0.47",
  "Flask-SQLAlchemy==3.1.1",
  "Flask-Migrate==4.1.0",
  "alembic==1.18.4",
  "psycopg2-binary==2.9.11",
  # BASE_API_OPTIONAL: celery
  "celery==5.6.2",
  "redis==7.2.0",
  "PyJWT==2.11.0",
  "passlib==1.7.4",
  "requests==2.32.5",
  # BASE_API_OPTIONAL: aws
  "boto3==1.42.83",
  "python-dotenv==1.2.1",
  "pydantic>=2.11.0,<3",
  "gunicorn==25.1.0",
  "gevent==25.9.1",
  "elastic-apm[flask]==6.23.0"
]

[project.optional-dependencies]
dev = [
  "pip-tools>=7.4.1",
  "ruff>=0.6.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["base_api*"]
